--- a/0x02. Shell, InputOutput Redirections and filters.ipynb
+++ b/0x02. Shell, InputOutput Redirections and filters.ipynb
@@ -74,24 +74,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main e4c0f50] commiting the alx-system_devops-engineering README.md file\n",
-      " 2 files changed, 42 insertions(+), 28 deletions(-)\n",
-      "Enumerating objects: 7, done.\n",
-      "Counting objects: 100% (7/7), done.\n",
+      "[main 285ec80] commiting README.md\n",
+      " 3 files changed, 2417 insertions(+), 4 deletions(-)\n",
+      " create mode 100644 0x02-shell_redirections/README.md\n",
+      " create mode 100644 0x02. Shell, InputOutput Redirections and filters.ipynb\n",
+      "Enumerating objects: 8, done.\n",
+      "Counting objects: 100% (8/8), done.\n",
       "Delta compression using up to 12 threads\n",
       "Compressing objects: 100% (4/4), done.\n",
-      "Writing objects: 100% (4/4), 843 bytes | 843.00 KiB/s, done.\n",
-      "Total 4 (delta 2), reused 0 (delta 0)\n",
+      "Writing objects: 100% (6/6), 7.33 KiB | 7.33 MiB/s, done.\n",
+      "Total 6 (delta 2), reused 0 (delta 0)\n",
       "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   154bd60..e4c0f50  main -> main\n",
+      "   b176dc5..285ec80  main -> main\n",
       "Branch 'main' set up to track remote branch 'main' from 'origin'.\n"
      ]
     }
@@ -99,26 +101,20 @@
    "source": [
     "\n",
     "!git add .\n",
-    "!git commit -m \"commiting READNE.md\"\n",
+    "!git commit -m \"commiting README.md\"\n",
     "!git push -u origin main"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Already up to date.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Already up to date.\n",
       "Everything up-to-date\n"
      ]
     }
@@ -135,7 +131,7 @@
     "###\n",
     "---\n",
     "<center>\n",
-    "<h1>  0x01. Shell, permissions  </h1>\n",
+    "<h1>  0x02. 0x02. Shell, I/O Redirections and filters  </h1>\n",
     "</center>\n",
     "\n",
     "---\n"
@@ -148,7 +144,7 @@
     "###\n",
     "---\n",
     "<center>\n",
-    "<h4>  0. My name is Betty </h4>\n",
+    "<h4>  0. Hello World </h4>\n",
     "</center>\n",
     "\n",
     "---"
@@ -159,40 +155,40 @@
    "metadata": {},
    "source": [
     "\n",
-    "#### Create a script that switches the current user to the user betty. \n",
-    "* You should use exactly 8 characters for your command (+1 character for the new line)\n",
-    "* You can assume that the user betty will exist when we will run your script\n",
+    "#### Write a script that prints \"Hello, World\", followed by a new line to the standard output. \n",
     "\n",
     "```bash\n",
-    "julien@ubuntu:/tmp/h$ tail -1 0-iam_betty | wc -c\n",
-    "9\n",
-    "julien@ubuntu:/tmp/h$\n",
+    "julien@ubuntu:/tmp/h$ ./0-hello_world \n",
+    "Hello, World\n",
+    "julien@ubuntu:/tmp/h$ ./0-hello_world | cat -e # cat is used to display the contents of a file, but the -e option makes it print a $ character at the end of each line.\n",
+    "Hello, World$\n",
+    "julien@ubuntu:/tmp/h$ \n",
     "```\n",
     "\n",
     "\n",
     "#### Repo:\n",
     "* GitHub repository: ``` alx-system_engineering-devops ```\n",
-    "* Directory: <code> 0x01-shell_permissions </code>\n",
-    "* File: <code>  0-iam_betty</code>"
+    "* Directory: ```0x02-shell_redirections``` \n",
+    "* File: ``` 0-hello_world```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting 0x01-shell_permissions/0-iam_betty\n"
+      "Writing 0x02-shell_redirections/0-hello_world\n"
      ]
     }
    ],
    "source": [
-    "%%file 0x01-shell_permissions/0-iam_betty\n",
+    "%%file 0x02-shell_redirections/0-hello_world\n",
     "#!/bin/bash\n",
-    "su betty\n"
+    "echo -e \"Hello, World\\n\"\n"
    ]
   },
   {
@@ -201,7 +197,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!chmod u+x /home/elkomy/alx-system_engineering-devops/0x01-shell_permissions/0-iam_betty"
+    "!chmod u+x 0x02-shell_redirections/0-hello_world"
    ]
   },
   {
@@ -213,31 +209,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "#!/bin/bash\n",
-      "su -betty\n"
+      "#!/bin/bash$\n",
+      "echo -e \"Hello, World\\n\"$\n"
      ]
     }
    ],
    "source": [
-    "!cat 0x01-shell_permissions/0-iam_betty"
+    "!cat -e 0x02-shell_redirections/0-hello_world"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9\n"
+      "Hello, World$\n",
+      "$\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
-    "tail -1 0x01-shell_permissions/0-iam_betty | wc -c"
+    "./0x02-shell_redirections/0-hello_world | cat -e"
    ]
   },
   {
@@ -268,7 +265,7 @@
    "source": [
     "\n",
     "!git add .\n",
-    "!git commit -m \"commit 0-current_working_directory\"\n",
+    "!git commit -m \"0-hello\"\n",
     "!git push -u origin main"
    ]
   },
