--- a/0x02. Shell, InputOutput Redirections and filters.ipynb
+++ b/0x02. Shell, InputOutput Redirections and filters.ipynb
@@ -174,21 +174,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing 0x02-shell_redirections/0-hello_world\n"
+      "Overwriting 0x02-shell_redirections/0-hello_world\n"
      ]
     }
    ],
    "source": [
     "%%file 0x02-shell_redirections/0-hello_world\n",
     "#!/bin/bash\n",
-    "echo -e \"Hello, World\\n\"\n"
+    "echo \"Hello, World\"\n"
    ]
   },
   {
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
      "output_type": "stream",
      "text": [
       "#!/bin/bash$\n",
-      "echo -e \"Hello, World\\n\"$\n"
+      "echo \"Hello, World\"$\n"
      ]
     }
    ],
@@ -239,25 +239,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 375e218] commit 0-current_working_directory\n",
-      " 3 files changed, 138 insertions(+), 112 deletions(-)\n",
-      " create mode 100755 0x01-shell_permissions/0-iam_betty\n",
-      "Enumerating objects: 10, done.\n",
-      "Counting objects: 100% (10/10), done.\n",
+      "[main a94466b] 0-hello_world\n",
+      " 2 files changed, 39 insertions(+), 40 deletions(-)\n",
+      " create mode 100755 0x02-shell_redirections/0-hello_world\n",
+      "Enumerating objects: 8, done.\n",
+      "Counting objects: 100% (8/8), done.\n",
       "Delta compression using up to 12 threads\n",
-      "Compressing objects: 100% (5/5), done.\n",
-      "Writing objects: 100% (6/6), 2.36 KiB | 2.36 MiB/s, done.\n",
-      "Total 6 (delta 2), reused 0 (delta 0)\n",
+      "Compressing objects: 100% (4/4), done.\n",
+      "Writing objects: 100% (5/5), 1.03 KiB | 1.03 MiB/s, done.\n",
+      "Total 5 (delta 2), reused 0 (delta 0)\n",
       "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   65cddee..375e218  main -> main\n",
+      "   285ec80..a94466b  main -> main\n",
       "Branch 'main' set up to track remote branch 'main' from 'origin'.\n"
      ]
     }
@@ -265,7 +265,7 @@
    "source": [
     "\n",
     "!git add .\n",
-    "!git commit -m \"0-hello\"\n",
+    "!git commit -m \"0-hello_world\"\n",
     "!git push -u origin main"
    ]
   },
