--- a/0x02. Shell, InputOutput Redirections and filters.ipynb
+++ b/0x02. Shell, InputOutput Redirections and filters.ipynb
@@ -239,25 +239,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main a94466b] 0-hello_world\n",
-      " 2 files changed, 39 insertions(+), 40 deletions(-)\n",
-      " create mode 100755 0x02-shell_redirections/0-hello_world\n",
-      "Enumerating objects: 8, done.\n",
-      "Counting objects: 100% (8/8), done.\n",
+      "[main 2d9333c] 0-hello_world\n",
+      " 2 files changed, 17 insertions(+), 17 deletions(-)\n",
+      "Enumerating objects: 9, done.\n",
+      "Counting objects: 100% (9/9), done.\n",
       "Delta compression using up to 12 threads\n",
       "Compressing objects: 100% (4/4), done.\n",
-      "Writing objects: 100% (5/5), 1.03 KiB | 1.03 MiB/s, done.\n",
+      "Writing objects: 100% (5/5), 656 bytes | 328.00 KiB/s, done.\n",
       "Total 5 (delta 2), reused 0 (delta 0)\n",
       "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   285ec80..a94466b  main -> main\n",
+      "   a94466b..2d9333c  main -> main\n",
       "Branch 'main' set up to track remote branch 'main' from 'origin'.\n"
      ]
     }
@@ -276,7 +275,7 @@
     "###\n",
     "---\n",
     "<center>\n",
-    "<h4> 1. Who am I </h4>\n",
+    "<h4> 1. Confused smiley </h4>\n",
     "</center>\n",
     "\n",
     "---\n"
@@ -286,53 +285,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Write a script that prints the effective username of the current user.\n",
-    "* Example:\n",
+    "* Write a script that displays a confused smiley `\"(Ôo)'`.\n",
     "    ```bash\n",
-    "    julien@ubuntu:/tmp/h$ ./1-who_am_i\n",
-    "    julien\n",
-    "    julien@ubuntu:/tmp/h$ \n",
+    "        julien@ubuntu:/tmp/h$ ./1-confused_smiley \n",
+    "        \"(Ôo)'\n",
+    "        julien@ubuntu:/tmp/h$ \n",
     "    ```\n",
     "\n",
     "* Repo:\n",
     "\n",
     "    * GitHub repository: <code > alx-system_engineering-devops </code>\n",
-    "    * Directory: <code > 0x01-shell_permissions </code>\n",
-    "    * File: <code >  File: 1-who_am_i </code>\n",
+    "    * Directory: <code > 0x02-shell_redirections </code>\n",
+    "    * File: <code >  File: 1-confused_smiley </code>\n",
     "   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing 0x01-shell_permissions/1-who_am_i\n"
+      "Overwriting 0x02-shell_redirections/1-confused_smiley\n"
      ]
     }
    ],
    "source": [
-    "%%file 0x01-shell_permissions/1-who_am_i\n",
+    "%%file 0x02-shell_redirections/1-confused_smiley\n",
     "#!/bin/bash\n",
-    "whoami"
+    "echo \"\\\"(Ôo)'\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "!chmod u+x /home/elkomy/alx-system_engineering-devops/0x01-shell_permissions/1-who_am_i"
+    "!chmod u+x 0x02-shell_redirections/1-confused_smiley"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -340,29 +338,29 @@
      "output_type": "stream",
      "text": [
       "#!/bin/bash\n",
-      "whoami\n"
+      "echo \"\\\"(Ôo)\\'\"\n"
      ]
     }
    ],
    "source": [
-    "!cat 0x01-shell_permissions/1-who_am_i"
+    "!cat 0x02-shell_redirections/1-confused_smiley"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "elkomy\n"
+      "\"(Ôo)'\n"
      ]
     }
    ],
    "source": [
-    "!./0x01-shell_permissions/1-who_am_i"
+    "!0x02-shell_redirections/1-confused_smiley"
    ]
   },
   {
@@ -392,7 +390,7 @@
    "source": [
     "\n",
     "!git add .\n",
-    "!git commit -m \"whoami\"\n",
+    "!git commit -m \"conf\"\n",
     "!git push -u origin main"
    ]
   },
