--- a/0x02. Shell, InputOutput Redirections and filters.ipynb
+++ b/0x02. Shell, InputOutput Redirections and filters.ipynb
@@ -365,24 +365,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 8cb791d] whoami\n",
-      " 2 files changed, 14 insertions(+), 12 deletions(-)\n",
-      "Enumerating objects: 7, done.\n",
-      "Counting objects: 100% (7/7), done.\n",
+      "[main a357abd] confused_smiley\n",
+      " 2 files changed, 29 insertions(+), 29 deletions(-)\n",
+      " create mode 100755 0x02-shell_redirections/1-confused_smiley\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enumerating objects: 8, done.\n",
+      "Counting objects: 100% (8/8), done.\n",
       "Delta compression using up to 12 threads\n",
       "Compressing objects: 100% (4/4), done.\n",
-      "Writing objects: 100% (4/4), 527 bytes | 527.00 KiB/s, done.\n",
-      "Total 4 (delta 2), reused 0 (delta 0)\n",
+      "Writing objects: 100% (5/5), 835 bytes | 835.00 KiB/s, done.\n",
+      "Total 5 (delta 2), reused 0 (delta 0)\n",
       "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   b9277cb..8cb791d  main -> main\n",
+      "   2d9333c..a357abd  main -> main\n",
       "Branch 'main' set up to track remote branch 'main' from 'origin'.\n"
      ]
     }
@@ -390,7 +397,7 @@
    "source": [
     "\n",
     "!git add .\n",
-    "!git commit -m \"conf\"\n",
+    "!git commit -m \"confused_smiley\"\n",
     "!git push -u origin main"
    ]
   },
@@ -401,7 +408,7 @@
     "###\n",
     "---\n",
     "<center>\n",
-    "<h4> 2. Groups </h4>\n",
+    "<h4> 2. Let's display a file </h4>\n",
     "</center>\n",
     "\n",
     "---"
@@ -411,69 +418,126 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Write a script that prints all the groups the current user is part of.\n",
+    "#### Display the content of the `/etc/passwd` file.\n",
+    "\n",
+    "#### Example\n",
     "\n",
     "```bash\n",
-    "julien@ubuntu:/tmp/h$ ./2-groups\n",
-    "julien adm cdrom sudo dip plugdev lpadmin sambashare\n",
-    "julien@ubuntu:/tmp/h$ \n",
+    "$ ./2-hellofile\n",
+    "##\n",
+    "# User Database\n",
+    "#\n",
+    "# Note that this file is consulted directly only when the system is running\n",
+    "# in single-user mode. At other times this information is provided by\n",
+    "# Open Directory.\n",
+    "#\n",
+    "# See the opendirectoryd(8) man page for additional information about\n",
+    "# Open Directory.\n",
+    "##\n",
+    "nobody:*:-2:-2:Unprivileged User:/var/empty:/usr/bin/false\n",
+    "root:*:0:0:System Administrator:/var/root:/bin/sh\n",
+    "daemon:*:1:1:System Services:/var/root:/usr/bin/false\n",
+    "_uucp:*:4:4:Unix to Unix Copy Protocol:/var/spool/uucp:/usr/sbin/uucico\n",
+    "_taskgated:*:13:13:Task Gate Daemon:/var/empty:/usr/bin/false\n",
+    "_networkd:*:24:24:Network Services:/var/networkd:/usr/bin/false\n",
+    "_installassistant:*:25:25:Install Assistant:/var/empty:/usr/bin/false\n",
+    "_lp:*:26:26:Printing Services:/var/spool/cups:/usr/bin/false\n",
+    "_postfix:*:27:27:Postfix Mail Server:/var/spool/postfix:/usr/bin/false\n",
+    "_scsd:*:31:31:Service Configuration Service:/var/empty:/usr/bin/false\n",
+    "_ces:*:32:32:Certificate Enrollment Service:/var/empty:/usr/bin/false\n",
+    "_mcxalr:*:54:54:MCX AppLaunch:/var/empty:/usr/bin/false\n",
+    "_krbfast:*:246:-2:Kerberos FAST Account:/var/empty:/usr/bin/false\n",
+    "$\n",
     "```\n",
     "\n",
     "\n",
     "#### Repo:\n",
     "* GitHub repository:   <code>alx-system_engineering-devops </code>\n",
-    "* Directory:   <code> 0x01-shell_permissions </code>\n",
-    "* File:   <code> 2-groups</code>"
+    "* Directory:   <code> 0x02-shell_redirections </code>\n",
+    "* File:   <code> 2-hellofile</code>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing 0x01-shell_permissions/2-groups\n"
+      "Writing 0x02-shell_redirections/2-hellofile\n"
      ]
     }
    ],
    "source": [
-    "%%file 0x01-shell_permissions/2-groups\n",
+    "%%file 0x02-shell_redirections/2-hellofile\n",
     "#!/bin/bash\n",
-    "id -nG"
+    "cat /etc/passwd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "!chmod u+x /home/elkomy/alx-system_engineering-devops/0x01-shell_permissions/2-groups"
+    "!chmod u+x 0x02-shell_redirections/2-hellofile"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "elkomy adm dialout cdrom floppy sudo audio dip video plugdev netdev\n"
+      "root:x:0:0:root:/root:/bin/bash\n",
+      "daemon:x:1:1:daemon:/usr/sbin:/usr/sbin/nologin\n",
+      "bin:x:2:2:bin:/bin:/usr/sbin/nologin\n",
+      "sys:x:3:3:sys:/dev:/usr/sbin/nologin\n",
+      "sync:x:4:65534:sync:/bin:/bin/sync\n",
+      "games:x:5:60:games:/usr/games:/usr/sbin/nologin\n",
+      "man:x:6:12:man:/var/cache/man:/usr/sbin/nologin\n",
+      "lp:x:7:7:lp:/var/spool/lpd:/usr/sbin/nologin\n",
+      "mail:x:8:8:mail:/var/mail:/usr/sbin/nologin\n",
+      "news:x:9:9:news:/var/spool/news:/usr/sbin/nologin\n",
+      "uucp:x:10:10:uucp:/var/spool/uucp:/usr/sbin/nologin\n",
+      "proxy:x:13:13:proxy:/bin:/usr/sbin/nologin\n",
+      "www-data:x:33:33:www-data:/var/www:/usr/sbin/nologin\n",
+      "backup:x:34:34:backup:/var/backups:/usr/sbin/nologin\n",
+      "list:x:38:38:Mailing List Manager:/var/list:/usr/sbin/nologin\n",
+      "irc:x:39:39:ircd:/var/run/ircd:/usr/sbin/nologin\n",
+      "gnats:x:41:41:Gnats Bug-Reporting System (admin):/var/lib/gnats:/usr/sbin/nologin\n",
+      "nobody:x:65534:65534:nobody:/nonexistent:/usr/sbin/nologin\n",
+      "systemd-network:x:100:102:systemd Network Management,,,:/run/systemd:/usr/sbin/nologin\n",
+      "systemd-resolve:x:101:103:systemd Resolver,,,:/run/systemd:/usr/sbin/nologin\n",
+      "systemd-timesync:x:102:104:systemd Time Synchronization,,,:/run/systemd:/usr/sbin/nologin\n",
+      "messagebus:x:103:106::/nonexistent:/usr/sbin/nologin\n",
+      "syslog:x:104:110::/home/syslog:/usr/sbin/nologin\n",
+      "_apt:x:105:65534::/nonexistent:/usr/sbin/nologin\n",
+      "tss:x:106:111:TPM software stack,,,:/var/lib/tpm:/bin/false\n",
+      "uuidd:x:107:112::/run/uuidd:/usr/sbin/nologin\n",
+      "tcpdump:x:108:113::/nonexistent:/usr/sbin/nologin\n",
+      "sshd:x:109:65534::/run/sshd:/usr/sbin/nologin\n",
+      "landscape:x:110:115::/var/lib/landscape:/usr/sbin/nologin\n",
+      "pollinate:x:111:1::/var/cache/pollinate:/bin/false\n",
+      "fwupd-refresh:x:112:116:fwupd-refresh user,,,:/run/systemd:/usr/sbin/nologin\n",
+      "systemd-coredump:x:999:999:systemd Core Dumper:/:/usr/sbin/nologin\n",
+      "lxd:x:998:100::/var/snap/lxd/common/lxd:/bin/false\n",
+      "elkomy:x:1000:1000:,,,:/home/elkomy:/bin/bash\n"
      ]
     }
    ],
    "source": [
-    "!source ./0x01-shell_permissions/2-groups"
+    "!source ./0x02-shell_redirections/2-hellofile"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -481,12 +545,12 @@
      "output_type": "stream",
      "text": [
       "#!/bin/bash\n",
-      "id -nG\n"
+      "cat /etc/passwd\n"
      ]
     }
    ],
    "source": [
-    "!cat 0x01-shell_permissions/2-groups"
+    "!cat 0x02-shell_redirections/2-hellofile"
    ]
   },
   {
