--- a/0x02. Shell, InputOutput Redirections and filters.ipynb
+++ b/0x02. Shell, InputOutput Redirections and filters.ipynb
@@ -555,32 +555,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 99867fe] group\n",
-      " 2 files changed, 46 insertions(+), 45 deletions(-)\n",
-      " create mode 100755 0x01-shell_permissions/2-groups\n",
+      "[main c71a3b6] 0x02-shell_redirections/2-hellofile\n",
+      " 2 files changed, 94 insertions(+), 28 deletions(-)\n",
+      " create mode 100755 0x02-shell_redirections/2-hellofile\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Enumerating objects: 8, done.\n",
       "Counting objects: 100% (8/8), done.\n",
       "Delta compression using up to 12 threads\n",
       "Compressing objects: 100% (4/4), done.\n",
-      "Writing objects: 100% (5/5), 895 bytes | 895.00 KiB/s, done.\n",
+      "Writing objects: 100% (5/5), 2.10 KiB | 715.00 KiB/s, done.\n",
       "Total 5 (delta 2), reused 0 (delta 0)\n",
       "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   8cb791d..99867fe  main -> main\n",
+      "   a357abd..c71a3b6  main -> main\n",
       "Branch 'main' set up to track remote branch 'main' from 'origin'.\n"
      ]
     }
    ],
    "source": [
     "!git add .\n",
-    "!git commit -m \"group\"\n",
+    "!git commit -m \"0x02-shell_redirections/2-hellofile\"\n",
     "!git push -u origin main"
    ]
   },
@@ -591,7 +597,7 @@
     "###\n",
     "---\n",
     "<center>\n",
-    "<h4> 3.New owner </h4>\n",
+    "<h4> 3. What about 2?</h4>\n",
     "</center>\n",
     "\n",
     "---"
@@ -601,61 +607,75 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Write a script that changes the owner of the file `hello` to the user `betty`.\n",
+    "#### Display the content of `/etc/passwd` and `/etc/hosts`.\n",
     "\n",
-    "\n",
+    "#### Example:\n",
     "```bash\n",
-    "julien@ubuntu:/tmp/h$ ls -l\n",
-    "total 4\n",
-    "-rwxrw-r-- 1 julien julien 30 Sep 20 14:23 3-new_owner\n",
-    "-rw-rw-r-- 1 julien julien  0 Sep 20 14:18 hello\n",
-    "julien@ubuntu:/tmp/h$ sudo ./3-new_owner \n",
-    "julien@ubuntu:/tmp/h$ ls -l\n",
-    "total 4\n",
-    "-rwxrw-r-- 1 julien julien 30 Sep 20 14:23 3-new_owner\n",
-    "-rw-rw-r-- 1 betty  julien  0 Sep 20 14:18 hello\n",
-    "julien@ubuntu:/tmp/h$\n",
+    "$ ./3-twofiles\n",
+    "##\n",
+    "# User Database\n",
+    "#\n",
+    "# Note that this file is consulted directly only when the system is running\n",
+    "# in single-user mode. At other times this information is provided by\n",
+    "# Open Directory.\n",
+    "#\n",
+    "# See the opendirectoryd(8) man page for additional information about\n",
+    "# Open Directory.\n",
+    "##\n",
+    "nobody:*:-2:-2:Unprivileged User:/var/empty:/usr/bin/false\n",
+    "root:*:0:0:System Administrator:/var/root:/bin/sh\n",
+    "daemon:*:1:1:System Services:/var/root:/usr/bin/false\n",
+    "##\n",
+    "# Host Database\n",
+    "#\n",
+    "# localhost is used to configure the loopback interface\n",
+    "# when the system is booting. Do not change this entry.\n",
+    "##\n",
+    "127.0.0.1   localhost\n",
+    "255.255.255.255 broadcasthost\n",
+    "::1 localhost\n",
+    "$\n",
     "```\n",
     "\n",
     "\n",
     "#### Repo:\n",
     "* GitHub repository: `alx-system_engineering-devops`\n",
-    "* Directory: `0x01-shell_permissions`\n",
-    "* File: `3-new_owner`"
+    "* Directory: `0x02-shell_redirections`\n",
+    "* File: `3-twofiles`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing 0x01-shell_permissions/3-new_owner\n"
+      "Writing 0x02-shell_redirections/3-twofiles\n"
      ]
     }
    ],
    "source": [
-    "%%file 0x01-shell_permissions/3-new_owner\n",
+    "%%file 0x02-shell_redirections/3-twofiles\n",
     "#!/bin/bash\n",
-    "chown betty: hello"
+    "cat /etc/passwd ; cat /etc/hosts"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
-    "chmod u+x /home/elkomy/alx-system_engineering-devops/0x01-shell_permissions/3-new_owner"
+    "chmod u+x 0x02-shell_redirections/3-twofiles"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -663,29 +683,78 @@
      "output_type": "stream",
      "text": [
       "#!/bin/bash\n",
-      "chown betty: hello\n"
+      "cat /etc/passwd ; cat /etc/hosts\n"
      ]
     }
    ],
    "source": [
-    "!cat 0x01-shell_permissions/3-new_owner"
+    "!cat 0x02-shell_redirections/3-twofiles"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "chown: invalid spec: ‘betty:’\n"
+      "root:x:0:0:root:/root:/bin/bash\n",
+      "daemon:x:1:1:daemon:/usr/sbin:/usr/sbin/nologin\n",
+      "bin:x:2:2:bin:/bin:/usr/sbin/nologin\n",
+      "sys:x:3:3:sys:/dev:/usr/sbin/nologin\n",
+      "sync:x:4:65534:sync:/bin:/bin/sync\n",
+      "games:x:5:60:games:/usr/games:/usr/sbin/nologin\n",
+      "man:x:6:12:man:/var/cache/man:/usr/sbin/nologin\n",
+      "lp:x:7:7:lp:/var/spool/lpd:/usr/sbin/nologin\n",
+      "mail:x:8:8:mail:/var/mail:/usr/sbin/nologin\n",
+      "news:x:9:9:news:/var/spool/news:/usr/sbin/nologin\n",
+      "uucp:x:10:10:uucp:/var/spool/uucp:/usr/sbin/nologin\n",
+      "proxy:x:13:13:proxy:/bin:/usr/sbin/nologin\n",
+      "www-data:x:33:33:www-data:/var/www:/usr/sbin/nologin\n",
+      "backup:x:34:34:backup:/var/backups:/usr/sbin/nologin\n",
+      "list:x:38:38:Mailing List Manager:/var/list:/usr/sbin/nologin\n",
+      "irc:x:39:39:ircd:/var/run/ircd:/usr/sbin/nologin\n",
+      "gnats:x:41:41:Gnats Bug-Reporting System (admin):/var/lib/gnats:/usr/sbin/nologin\n",
+      "nobody:x:65534:65534:nobody:/nonexistent:/usr/sbin/nologin\n",
+      "systemd-network:x:100:102:systemd Network Management,,,:/run/systemd:/usr/sbin/nologin\n",
+      "systemd-resolve:x:101:103:systemd Resolver,,,:/run/systemd:/usr/sbin/nologin\n",
+      "systemd-timesync:x:102:104:systemd Time Synchronization,,,:/run/systemd:/usr/sbin/nologin\n",
+      "messagebus:x:103:106::/nonexistent:/usr/sbin/nologin\n",
+      "syslog:x:104:110::/home/syslog:/usr/sbin/nologin\n",
+      "_apt:x:105:65534::/nonexistent:/usr/sbin/nologin\n",
+      "tss:x:106:111:TPM software stack,,,:/var/lib/tpm:/bin/false\n",
+      "uuidd:x:107:112::/run/uuidd:/usr/sbin/nologin\n",
+      "tcpdump:x:108:113::/nonexistent:/usr/sbin/nologin\n",
+      "sshd:x:109:65534::/run/sshd:/usr/sbin/nologin\n",
+      "landscape:x:110:115::/var/lib/landscape:/usr/sbin/nologin\n",
+      "pollinate:x:111:1::/var/cache/pollinate:/bin/false\n",
+      "fwupd-refresh:x:112:116:fwupd-refresh user,,,:/run/systemd:/usr/sbin/nologin\n",
+      "systemd-coredump:x:999:999:systemd Core Dumper:/:/usr/sbin/nologin\n",
+      "lxd:x:998:100::/var/snap/lxd/common/lxd:/bin/false\n",
+      "elkomy:x:1000:1000:,,,:/home/elkomy:/bin/bash\n",
+      "# This file was automatically generated by WSL. To stop automatic generation of this file, add the following entry to /etc/wsl.conf:\n",
+      "# [network]\n",
+      "# generateHosts = false\n",
+      "127.0.0.1\tlocalhost\n",
+      "127.0.1.1\telkomy.\telkomy\n",
+      "﻿\n",
+      "192.168.1.9\thost.docker.internal\n",
+      "192.168.1.9\tgateway.docker.internal\n",
+      "127.0.0.1\tkubernetes.docker.internal\n",
+      "\n",
+      "# The following lines are desirable for IPv6 capable hosts\n",
+      "::1     ip6-localhost ip6-loopback\n",
+      "fe00::0 ip6-localnet\n",
+      "ff00::0 ip6-mcastprefix\n",
+      "ff02::1 ip6-allnodes\n",
+      "ff02::2 ip6-allrouters\n"
      ]
     }
    ],
    "source": [
-    "!./0x01-shell_permissions/3-new_owner"
+    "!./0x02-shell_redirections/3-twofiles"
    ]
   },
   {
@@ -715,7 +784,7 @@
    ],
    "source": [
     "!git add .\n",
-    "!git commit -m \"chown betty: hello\"\n",
+    "!git commit -m \"0x02-shell_redirections/3-twofiles\"\n",
     "!git push -u origin main"
    ]
   },
