0x02-shell_redirections/3-twofiles

--- a/0x02. Shell, InputOutput Redirections and filters.ipynb
+++ b/0x02. Shell, InputOutput Redirections and filters.ipynb
@@ -646,26 +646,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing 0x02-shell_redirections/3-twofiles\n"
+      "Overwriting 0x02-shell_redirections/3-twofiles\n"
      ]
     }
    ],
    "source": [
     "%%file 0x02-shell_redirections/3-twofiles\n",
     "#!/bin/bash\n",
-    "cat /etc/passwd ; cat /etc/hosts"
+    "cat /etc/passwd /etc/hosts"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +683,7 @@
      "output_type": "stream",
      "text": [
       "#!/bin/bash\n",
-      "cat /etc/passwd ; cat /etc/hosts\n"
+      "cat /etc/passwd /etc/hosts\n"
      ]
     }
    ],
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -759,25 +759,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main b1d5c23] chown betty: hello\n",
-      " 2 files changed, 39 insertions(+), 37 deletions(-)\n",
-      " create mode 100755 0x01-shell_permissions/3-new_owner\n",
+      "[main ce26c06] 0x02-shell_redirections/3-twofiles\n",
+      " 2 files changed, 106 insertions(+), 35 deletions(-)\n",
+      " create mode 100755 0x02-shell_redirections/3-twofiles\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Enumerating objects: 8, done.\n",
       "Counting objects: 100% (8/8), done.\n",
       "Delta compression using up to 12 threads\n",
       "Compressing objects: 100% (4/4), done.\n",
-      "Writing objects: 100% (5/5), 890 bytes | 296.00 KiB/s, done.\n",
+      "Writing objects: 100% (5/5), 1.23 KiB | 628.00 KiB/s, done.\n",
       "Total 5 (delta 3), reused 0 (delta 0)\n",
       "remote: Resolving deltas: 100% (3/3), completed with 3 local objects.\u001b[K\n",
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   99867fe..b1d5c23  main -> main\n",
+      "   c71a3b6..ce26c06  main -> main\n",
       "Branch 'main' set up to track remote branch 'main' from 'origin'.\n"
      ]
     }
