--- a/0x02. Shell, InputOutput Redirections and filters.ipynb
+++ b/0x02. Shell, InputOutput Redirections and filters.ipynb
@@ -759,31 +759,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main ce26c06] 0x02-shell_redirections/3-twofiles\n",
-      " 2 files changed, 106 insertions(+), 35 deletions(-)\n",
-      " create mode 100755 0x02-shell_redirections/3-twofiles\n"
+      "[main a70f871] 0x02-shell_redirections/3-twofiles\n",
+      " 2 files changed, 20 insertions(+), 14 deletions(-)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enumerating objects: 8, done.\n",
-      "Counting objects: 100% (8/8), done.\n",
+      "Enumerating objects: 9, done.\n",
+      "Counting objects: 100% (9/9), done.\n",
       "Delta compression using up to 12 threads\n",
       "Compressing objects: 100% (4/4), done.\n",
-      "Writing objects: 100% (5/5), 1.23 KiB | 628.00 KiB/s, done.\n",
+      "Writing objects: 100% (5/5), 632 bytes | 632.00 KiB/s, done.\n",
       "Total 5 (delta 3), reused 0 (delta 0)\n",
       "remote: Resolving deltas: 100% (3/3), completed with 3 local objects.\u001b[K\n",
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   c71a3b6..ce26c06  main -> main\n",
+      "   ce26c06..a70f871  main -> main\n",
       "Branch 'main' set up to track remote branch 'main' from 'origin'.\n"
      ]
     }
@@ -803,7 +802,7 @@
     "\n",
     "---\n",
     "<center>\n",
-    "<h4> 4. Empty! </h4>\n",
+    "<h4> 4. Last lines of a file</h4>\n",
     "</center>\n",
     "\n",
     "---"
@@ -813,46 +812,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Write a script that creates an empty file called `hello`.\n",
-    "\n",
-    "\n",
+    "#### Display the last 10 lines of `/etc/passwd`.\n",
+    "#### Example:\n",
+    "```bash\n",
+    "$ ./4-lastlines\n",
+    "_assetcache:*:235:235:Asset Cache Service:/var/empty:/usr/bin/false\n",
+    "_coremediaiod:*:236:236:Core Media IO Daemon:/var/empty:/usr/bin/false\n",
+    "_launchservicesd:*:239:239:_launchservicesd:/var/empty:/usr/bin/false\n",
+    "_iconservices:*:240:240:IconServices:/var/empty:/usr/bin/false\n",
+    "_distnote:*:241:241:DistNote:/var/empty:/usr/bin/false\n",
+    "_nsurlsessiond:*:242:242:NSURLSession Daemon:/var/db/nsurlsessiond:/usr/bin/false\n",
+    "_nsurlstoraged:*:243:243:NSURLStorage Daemon:/var/empty:/usr/bin/false\n",
+    "_displaypolicyd:*:244:244:Display Policy Daemon:/var/empty:/usr/bin/false\n",
+    "_astris:*:245:245:Astris Services:/var/db/astris:/usr/bin/false\n",
+    "_krbfast:*:246:-2:Kerberos FAST Account:/var/empty:/usr/bin/false\n",
+    "```\n",
+    "Tips: “Thinks of it as a cat, what is at the end of it?”\n",
     "#### Repo:\n",
     "* GitHub repository: `alx-system_engineering-devops`\n",
-    "* Directory: `0x01-shell_permissions`\n",
-    "* File: `4-empty`"
+    "* Directory: `0x02-shell_redirections`\n",
+    "* File: `4-lastlines`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing 0x01-shell_permissions/4-empty\n"
+      "Overwriting 0x02-shell_redirections/4-lastlines\n"
      ]
     }
    ],
    "source": [
-    "%%file \n",
+    "%%file 0x02-shell_redirections/4-lastlines\n",
     "#!/bin/bash\n",
-    "touch hello"
+    "tail -n 10 /etc/passwd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "!chmod u+x 0x01-shell_permissions/4-empty"
+    "!chmod u+x 0x02-shell_redirections/4-lastlines"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -860,21 +872,38 @@
      "output_type": "stream",
      "text": [
       "#!/bin/bash\n",
-      "touch hello\n"
+      "tail -n 10 /etc/passwd\n"
      ]
     }
    ],
    "source": [
-    "!cat 0x01-shell_permissions/4-empty"
+    "!cat 0x02-shell_redirections/4-lastlines"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tss:x:106:111:TPM software stack,,,:/var/lib/tpm:/bin/false\n",
+      "uuidd:x:107:112::/run/uuidd:/usr/sbin/nologin\n",
+      "tcpdump:x:108:113::/nonexistent:/usr/sbin/nologin\n",
+      "sshd:x:109:65534::/run/sshd:/usr/sbin/nologin\n",
+      "landscape:x:110:115::/var/lib/landscape:/usr/sbin/nologin\n",
+      "pollinate:x:111:1::/var/cache/pollinate:/bin/false\n",
+      "fwupd-refresh:x:112:116:fwupd-refresh user,,,:/run/systemd:/usr/sbin/nologin\n",
+      "systemd-coredump:x:999:999:systemd Core Dumper:/:/usr/sbin/nologin\n",
+      "lxd:x:998:100::/var/snap/lxd/common/lxd:/bin/false\n",
+      "elkomy:x:1000:1000:,,,:/home/elkomy:/bin/bash\n"
+     ]
+    }
+   ],
    "source": [
-    "!./0x01-shell_permissions/4-empty"
+    "!./0x02-shell_redirections/4-lastlines"
    ]
   },
   {
