--- a/0x02. Shell, InputOutput Redirections and filters.ipynb
+++ b/0x02. Shell, InputOutput Redirections and filters.ipynb
@@ -908,50 +908,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main f040ad5] Hello\n",
-      " 1 file changed, 28 insertions(+), 28 deletions(-)\n",
-      "Enumerating objects: 5, done.\n",
-      "Counting objects: 100% (5/5), done.\n",
+      "[main 313c5ce] 0x02-shell_redirections/4-lastlines\n",
+      " 2 files changed, 57 insertions(+), 26 deletions(-)\n",
+      " create mode 100755 0x02-shell_redirections/4-lastlines\n",
+      "Enumerating objects: 8, done.\n",
+      "Counting objects: 100% (8/8), done.\n",
       "Delta compression using up to 12 threads\n",
-      "Compressing objects: 100% (3/3), done.\n",
-      "Writing objects: 100% (3/3), 473 bytes | 473.00 KiB/s, done.\n",
-      "Total 3 (delta 2), reused 0 (delta 0)\n",
-      "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
+      "Compressing objects: 100% (4/4), done.\n",
+      "Writing objects: 100% (5/5), 1.02 KiB | 1.02 MiB/s, done.\n",
+      "Total 5 (delta 3), reused 0 (delta 0)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "remote: Resolving deltas: 100% (3/3), completed with 3 local objects.\u001b[K\n",
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   9f7a3ea..f040ad5  main -> main\n",
+      "   a70f871..313c5ce  main -> main\n",
       "Branch 'main' set up to track remote branch 'main' from 'origin'.\n"
      ]
     }
    ],
    "source": [
     "!git add .\n",
-    "!git commit -m \"Hello\"\n",
+    "!git commit -m \"0x02-shell_redirections/4-lastlines\"\n",
     "!git push -u origin main"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "./0x01-shell_permissions/4-empty"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -962,7 +952,7 @@
     "\n",
     "---\n",
     "<center>\n",
-    "<h4> 5. Execute</h4>\n",
+    "<h4> 5. I'd prefer the first ones actually</h4>\n",
     "</center>\n",
     "\n",
     "---"
@@ -972,61 +962,79 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Write a script that adds execute permission to the owner of the file hello.\n",
+    "##### Display the first 10 lines of `/etc/passwd`\n",
     "\n",
-    "* The file hello will be in the working directory\n",
+    "\n",
+    "##### Example:\n",
     "\n",
     "\n",
     "```bash\n",
-    "julien@ubuntu:/tmp/h$ ls -l\n",
-    "total 8\n",
-    "-rwxrw-r-- 1 julien julien 28 Sep 20 14:26 5-execute\n",
-    "-rw-rw-r-- 1 julien julien 23 Sep 20 14:25 hello\n",
-    "julien@ubuntu:/tmp/h$ ./hello\n",
-    "bash: ./hello: Permission denied\n",
-    "julien@ubuntu:/tmp/h$ ./5-execute \n",
-    "julien@ubuntu:/tmp/h$ ls -l\n",
-    "total 8\n",
-    "-rwxrw-r-- 1 julien julien 28 Sep 20 14:26 5-execute\n",
-    "-rwxrw-r-- 1 julien julien 23 Sep 20 14:25 hello\n",
-    "julien@ubuntu:/tmp/h$ \n",
+    "$ ./5-firstlines\n",
+    "##\n",
+    "# User Database\n",
+    "#\n",
+    "# Note that this file is consulted directly only when the system is running\n",
+    "# in single-user mode. At other times this information is provided by\n",
+    "# Open Directory.\n",
+    "#\n",
+    "# See the opendirectoryd(8) man page for additional information about\n",
+    "# Open Directory.\n",
+    "##\n",
+    "$\n",
     "```\n",
     "\n",
     "##### Repo:\n",
     "\n",
     "* GitHub repository: `alx-system_engineering-devops`\n",
-    "* Directory: `0x01-shell_permissions`\n",
-    "* File: `5-execute`"
+    "* Directory: `0x02-shell_redirections`\n",
+    "* File: `5-firstlines`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing 0x01-shell_permissions/5-execute\n"
+      "Writing 0x02-shell_redirections/5-firstlines\n"
      ]
     }
    ],
    "source": [
-    "%%file 0x01-shell_permissions/5-execute\n",
+    "%%file 0x02-shell_redirections/5-firstlines\n",
     "#!/bin/bash\n",
-    "chmod u+x hello"
+    "head -n 10 /etc/passwd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root:x:0:0:root:/root:/bin/bash\n",
+      "daemon:x:1:1:daemon:/usr/sbin:/usr/sbin/nologin\n",
+      "bin:x:2:2:bin:/bin:/usr/sbin/nologin\n",
+      "sys:x:3:3:sys:/dev:/usr/sbin/nologin\n",
+      "sync:x:4:65534:sync:/bin:/bin/sync\n",
+      "games:x:5:60:games:/usr/games:/usr/sbin/nologin\n",
+      "man:x:6:12:man:/var/cache/man:/usr/sbin/nologin\n",
+      "lp:x:7:7:lp:/var/spool/lpd:/usr/sbin/nologin\n",
+      "mail:x:8:8:mail:/var/mail:/usr/sbin/nologin\n",
+      "news:x:9:9:news:/var/spool/news:/usr/sbin/nologin\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash\n",
-    "chmod u+x 0x01-shell_permissions/5-execute\n",
-    "./0x01-shell_permissions/5-execute"
+    "chmod u+x 0x02-shell_redirections/5-firstlines\n",
+    "./0x02-shell_redirections/5-firstlines"
    ]
   },
   {
