--- a/0x02. Shell, InputOutput Redirections and filters.ipynb
+++ b/0x02. Shell, InputOutput Redirections and filters.ipynb
@@ -1039,17 +1039,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 3b2eab6] 0x01-shell_permissions/5-execute\n",
-      " 3 files changed, 38 insertions(+), 59 deletions(-)\n",
-      " create mode 100755 0x01-shell_permissions/5-execute\n",
-      " mode change 100644 => 100755 hello\n"
+      "[main 563cd23] 0x02-shell_redirections/5-firstlines\n",
+      " 2 files changed, 64 insertions(+), 54 deletions(-)\n",
+      " create mode 100755 0x02-shell_redirections/5-firstlines\n"
      ]
     },
     {
@@ -1057,14 +1056,14 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   f040ad5..3b2eab6  main -> main\n"
+      "   313c5ce..563cd23  main -> main\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
     "git add .\n",
-    "git commit -m \"0x01-shell_permissions/5-execute\"\n",
+    "git commit -m \"0x02-shell_redirections/5-firstlines\"\n",
     "git push"
    ]
   },
@@ -1077,7 +1076,7 @@
     "\n",
     "---\n",
     "<center>\n",
-    "<h4> 6.Multiple permissions </h4>\n",
+    "<h4> 6. Line #2 </h4>\n",
     "</center>\n",
     "\n",
     "---"
@@ -1087,76 +1086,69 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Write a script that adds execute permission to the owner and the group owner, and read permission to other users, to the file `hello`.\n",
+    "##### Write a script that displays the third line of the file `iacta` .\n",
     "\n",
-    "    * The file `hello` will be in the working directory\n",
+    "##### The file `iacta` will be in the working directory \n",
+    "* You're not allowed to use 'sed'\n",
     "\n",
     "```bash\n",
-    "julien@ubuntu:/tmp/h$ ls -l\n",
-    "total 8\n",
-    "-rwxrw-r-- 1 julien julien 36 Sep 20 14:31 6-multiple_permissions\n",
-    "-r--r----- 1 julien julien 23 Sep 20 14:25 hello\n",
-    "julien@ubuntu:/tmp/h$ ./6-multiple_permissions \n",
-    "julien@ubuntu:/tmp/h$ ls -l\n",
-    "total 8\n",
-    "-rwxrw-r-- 1 julien julien 36 Sep 20 14:31 6-multiple_permissions\n",
-    "-r-xr-xr-- 1 julien julien 23 Sep 20 14:25 hello\n",
-    "julien@ubuntu:/tmp/h$ \n",
+    "julien@ubuntu:/tmp/h$ cat iacta \n",
+    "Alea iacta est\n",
+    "\n",
+    "Alea iacta est (\"The die is cast\") is a Latin phrase attributed by Suetonius\n",
+    "(as iacta alea est) to Julius Caesar on January 10, 49 BC\n",
+    "as he led his army across the Rubicon river in Northern Italy. With this step,\n",
+    "he entered Italy at the head of his army in defiance of the Senate and began\n",
+    "his long civil war against Pompey and the Optimates. The phrase has been\n",
+    "adopted in Italian (Il dado è tratto), Romanian (Zarurile au fost aruncate),\n",
+    "Spanish (La suerte está echada), French (Les dés sont jetés), Portuguese (A\n",
+    "sorte está lançada), Dutch (De teerling is geworpen),\n",
+    "German (Der Würfel ist gefallen), Hungarian (A kocka el van vetve) and many other languages to\n",
+    "indicate that events have passed a point of no return.\n",
+    "\n",
+    "Read more: https://en.wikipedia.org/wiki/Alea_iacta_est\n",
+    "julien@ubuntu:/tmp/h$ ./6-third_line \n",
+    "Alea iacta est (\"The die is cast\") is a Latin phrase attributed by Suetonius\n",
+    "julien@ubuntu:/tmp/h$\n",
     "\n",
     "```\n",
+    "Note: The output will differ, depending on the content of the file `iacta` .\n",
     "\n",
     "#### Repo:\n",
     "\n",
     "* GitHub repository: `alx-system_engineering-devops`\n",
-    "* Directory: `0x01-shell_permissions`\n",
-    "* File: `6-multiple_permissions`"
+    "* Directory: `0x02-shell_redirections`\n",
+    "* File: `6-third_line`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing 0x01-shell_permissions/6-multiple_permissions\n"
+      "Writing 0x02-shell_redirections/6-third_line\n"
      ]
     }
    ],
    "source": [
-    "%%file 0x01-shell_permissions/6-multiple_permissions\n",
+    "%%file 0x02-shell_redirections/6-third_line\n",
     "#!/bin/bash\n",
-    "chmod u+x,g+x hello"
+    "head -n 3 iacta | tail -n 1 iacta"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "total 164\n",
-      "drwxr-xr-x 2 elkomy elkomy  4096 Mar  2 14:09 0x00-shell_basics\n",
-      "-rw-r--r-- 1 elkomy elkomy 75098 Mar  2 15:54 0x00-shell_basics.ipynb\n",
-      "drwxr-xr-x 2 elkomy elkomy  4096 Mar  9 18:26 0x01-shell_permissions\n",
-      "-rw-r--r-- 1 elkomy elkomy 71862 Mar  9 18:50 0x01-shell_permissions.ipynb\n",
-      "-rw-r--r-- 1 elkomy elkomy   108 Mar  2 16:08 README.md\n",
-      "-rwxr-xr-- 1 elkomy elkomy     0 Mar  9 01:18 hello\n",
-      "-rw-r--r-- 1 elkomy elkomy   688 Mar  2 14:52 school.mgc\n",
-      "-rw-r--r-- 1 elkomy elkomy     0 Feb 28 01:08 test.HTML\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%bash\n",
-    "chmod u+x 0x01-shell_permissions/6-multiple_permissions\n",
-    "./0x01-shell_permissions/6-multiple_permissions\n",
-    "ls -l\n"
+    "chmod u+x  0x02-shell_redirections/6-third_line\n",
+    "\n"
    ]
   },
   {
@@ -1185,7 +1177,7 @@
    "source": [
     "%%bash\n",
     "git add .\n",
-    "git commit -m \"6-multiple_permissions\"\n",
+    "git commit -m \"6-\"\n",
     "git push"
    ]
   },
