--- a/0x02. Shell, InputOutput Redirections and filters.ipynb
+++ b/0x02. Shell, InputOutput Redirections and filters.ipynb
@@ -1123,21 +1123,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing 0x02-shell_redirections/6-third_line\n"
+      "Overwriting 0x02-shell_redirections/6-third_line\n"
      ]
     }
    ],
    "source": [
     "%%file 0x02-shell_redirections/6-third_line\n",
     "#!/bin/bash\n",
-    "head -n 3 iacta | tail -n 1 iacta"
+    "head -n 3 iacta | tail -n 1 "
    ]
   },
   {
@@ -1153,16 +1153,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 3c9fdc1] 6-multiple_permissions\n",
-      " 2 files changed, 43 insertions(+), 39 deletions(-)\n",
-      " create mode 100755 0x01-shell_permissions/6-multiple_permissions\n"
+      "[main b2c2939] 6-third_line\n",
+      " 2 files changed, 42 insertions(+), 48 deletions(-)\n",
+      " create mode 100755 0x02-shell_redirections/6-third_line\n"
      ]
     },
     {
@@ -1170,14 +1170,14 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   3b2eab6..3c9fdc1  main -> main\n"
+      "   563cd23..b2c2939  main -> main\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
     "git add .\n",
-    "git commit -m \"6-\"\n",
+    "git commit -m \"6-third_line\"\n",
     "git push"
    ]
   },
