--- a/0x02. Shell, InputOutput Redirections and filters.ipynb
+++ b/0x02. Shell, InputOutput Redirections and filters.ipynb
@@ -1153,16 +1153,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main b2c2939] 6-third_line\n",
-      " 2 files changed, 42 insertions(+), 48 deletions(-)\n",
-      " create mode 100755 0x02-shell_redirections/6-third_line\n"
+      "[main 34dccbd] 6-third_line\n",
+      " 2 files changed, 10 insertions(+), 10 deletions(-)\n"
      ]
     },
     {
@@ -1170,7 +1169,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   563cd23..b2c2939  main -> main\n"
+      "   b2c2939..34dccbd  main -> main\n"
      ]
     }
    ],
@@ -1190,7 +1189,7 @@
     "\n",
     "---\n",
     "<center>\n",
-    "<h4> 7.Everybody! </h4>\n",
+    "<h4> 7.It is a good file that cuts iron without making a noise </h4>\n",
     "</center>\n",
     "\n",
     "---"
@@ -1200,76 +1199,73 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Write a script that adds execution permission to the owner, the group owner and the other users, to the file hello\n",
-    "\n",
-    "    * The file hello will be in the working directory\n",
-    "    * You are not allowed to use commas for this script\n",
+    "##### Write a shell script that creates a file named exactly `\\*\\\\'\"Best School\"\\'\\\\*$\\?\\*\\*\\*\\*\\*:)`  containing the text `Best School` ending by a new line.\n",
     "\n",
     "```bash\n",
-    "julien@ubuntu:/tmp/h$ ls -l\n",
-    "total 8\n",
-    "-rwxrw-r-- 1 julien julien 28 Sep 20 14:35 7-everybody\n",
-    "-rw-r----- 1 julien julien 23 Sep 20 14:25 hello\n",
-    "julien@ubuntu:/tmp/h$ ./7-everybody \n",
-    "julien@ubuntu:/tmp/h$ ls -l\n",
-    "total 8\n",
-    "-rwxrw-r-- 1 julien julien 28 Sep 20 14:35 7-everybody\n",
-    "-rwxr-x--x 1 julien julien 23 Sep 20 14:25 hello\n",
-    "julien@ubuntu:/tmp/h$ \n",
+    "julien@ubuntu:~/shell$ ls && ./7-file && ls -l && cat -e \\\\*\n",
+    "0-mac_and_cheese 7-file 7-file~ Makefile\n",
+    "total 20\n",
+    "-rwxrw-r-- 1 julien julien 79 Jan 20 06:24 0-mac_and_cheese\n",
+    "-rwxrw-r-- 1 julien julien 90 Jan 20 06:40 7-file\n",
+    "-rwxrw-r-- 1 julien julien 69 Jan 20 06:37 7-file~\n",
+    "-rw-rw-r-- 1 julien julien 14 Jan 20 06:38 Makefile\n",
+    "-rw-rw-r-- 1 julien julien 17 Jan 20 06:40 '\\*\\\\'\"Best School\"\\'\\\\*$\\?\\*\\*\\*\\*\\*:)'\n",
+    "Best School$\n",
+    "julien@ubuntu:~/shell$ \n",
     "```\n",
     "\n",
     "#### Repo:\n",
     "\n",
     "* GitHub repository: `alx-system_engineering-devops`\n",
-    "* Directory: `0x01-shell_permissions`\n",
-    "* File: `7-everybody`"
+    "* Directory: `0x02-shell_redirections`\n",
+    "* File: `7-file`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing 0x01-shell_permissions/7-everybody\n"
+      "Overwriting 0x02-shell_redirections/7-file\n"
      ]
     }
    ],
    "source": [
-    "%%file 0x01-shell_permissions/7-everybody\n",
+    "%%file 0x02-shell_redirections/7-file\n",
     "#!/bin/bash\n",
-    "chmod +x hello"
+    "echo \"Best School\" > \\\\\\*\\\\\\\\\\'\\\"Best\\ School\\\"\\\\\\'\\\\\\\\\\*\\$\\\\\\?\\\\\\*\\\\\\*\\\\\\*\\\\\\*\\\\\\*\\:\\)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "total 164\n",
-      "drwxr-xr-x 2 elkomy elkomy  4096 Mar  2 14:09 0x00-shell_basics\n",
-      "-rw-r--r-- 1 elkomy elkomy 75098 Mar  2 15:54 0x00-shell_basics.ipynb\n",
-      "drwxr-xr-x 2 elkomy elkomy  4096 Mar  9 19:34 0x01-shell_permissions\n",
-      "-rw-r--r-- 1 elkomy elkomy 72274 Mar  9 19:34 0x01-shell_permissions.ipynb\n",
-      "-rw-r--r-- 1 elkomy elkomy   108 Mar  2 16:08 README.md\n",
-      "-rwxr-xr-x 1 elkomy elkomy     0 Mar  9 01:18 hello\n",
-      "-rw-r--r-- 1 elkomy elkomy   688 Mar  2 14:52 school.mgc\n",
-      "-rw-r--r-- 1 elkomy elkomy     0 Feb 28 01:08 test.HTML\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "#\\\\\\*\\\\\\\\\\'\\\"Best\\ School\\\"\\\\\\'\\\\\\\\\\*\\$\\\\\\?\\\\\\*\\\\\\*\\\\\\*\\\\\\*\\\\\\*\\:\\)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%%bash\n",
-    "chmod u+x 0x01-shell_permissions/7-everybody\n",
-    "./0x01-shell_permissions/7-everybody\n",
-    "ls -l"
+    "chmod u+x 0x02-shell_redirections/7-file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!./0x02-shell_redirections/7-file"
    ]
   },
   {
