0x02-shell_redirections/8-cwd_state

--- a/0x02. Shell, InputOutput Redirections and filters.ipynb
+++ b/0x02. Shell, InputOutput Redirections and filters.ipynb
@@ -1270,16 +1270,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 33ba3fc] 7-everybody\n",
-      " 2 files changed, 42 insertions(+), 39 deletions(-)\n",
-      " create mode 100755 0x01-shell_permissions/7-everybody\n"
+      "[main 987b10d] 7-everybody\n",
+      " 3 files changed, 46 insertions(+), 47 deletions(-)\n",
+      " create mode 100755 0x02-shell_redirections/7-file\n",
+      " create mode 100644 \"\\\\*\\\\\\\\'\\\"Best School\\\"\\\\'\\\\\\\\*$\\\\?\\\\*\\\\*\\\\*\\\\*\\\\*:)\"\n"
      ]
     },
     {
@@ -1287,7 +1288,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   3c9fdc1..33ba3fc  main -> main\n"
+      "   34dccbd..987b10d  main -> main\n"
      ]
     }
    ],
@@ -1307,7 +1308,7 @@
     "\n",
     "---\n",
     "<center>\n",
-    "<h4> 8. James Bond </h4>\n",
+    "<h4> 8. Save current state of directory </h4>\n",
     "</center>\n",
     "\n",
     "---"
@@ -1317,86 +1318,91 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Write a script that sets the permission to the file hello as follows:\n",
-    "\n",
-    "* Owner: no permission at all\n",
-    "* Group: no permission at all\n",
-    "* Other users: all the permissions\n",
-    "\n",
-    "The file `hello` will be in the working directory You are not allowed to use commas for this script\n",
+    "##### Write a script that writes into the file `ls_cwd_content` the result of the command `ls -la` . If the file `ls_cwd_content` already exists, it should be overwritten. If the file `ls_cwd_content` dose not exist, create it.\n",
     "\n",
     "```bash\n",
-    "julien@ubuntu:/tmp/h$ ls -l\n",
-    "total 8\n",
-    "-rwxrw-r-- 1 julien julien 28 Sep 20 14:40 8-James_Bond\n",
-    "-rwxr-x--x 1 julien julien 23 Sep 20 14:25 hello\n",
-    "julien@ubuntu:/tmp/h$ ./8-James_Bond \n",
-    "julien@ubuntu:/tmp/h$ ls -l\n",
-    "total 8\n",
-    "-rwxrw-r-- 1 julien julien 28 Sep 20 14:40 8-James_Bond\n",
-    "-------rwx 1 julien julien 23 Sep 20 14:25 hello\n",
+    "julien@ubuntu:/tmp/h$ ls -la\n",
+    "total 20\n",
+    "drwxrwxr-x  2 julien julien 4096 Sep 20 18:18 .\n",
+    "drwxrwxrwt 13 root   root   4096 Sep 20 18:18 ..\n",
+    "-rwxrw-r--  1 julien julien   36 Sep 20 18:18 8-cwd_state\n",
+    "-rw-rw-r--  1 betty  julien   23 Sep 20 14:25 hello\n",
+    "-rw-rw-r--  1 julien julien  926 Sep 20 17:52 iacta\n",
+    "julien@ubuntu:/tmp/h$ ./8-cwd_state \n",
+    "julien@ubuntu:/tmp/h$ ls -la\n",
+    "total 24\n",
+    "drwxrwxr-x  2 julien julien 4096 Sep 20 18:18 .\n",
+    "drwxrwxrwt 13 root   root   4096 Sep 20 18:18 ..\n",
+    "-rwxrw-r--  1 julien julien   36 Sep 20 18:18 8-cwd_state\n",
+    "-rw-rw-r--  1 betty  julien   23 Sep 20 14:25 hello\n",
+    "-rw-rw-r--  1 julien julien  926 Sep 20 17:52 iacta\n",
+    "-rw-rw-r--  1 julien julien  329 Sep 20 18:18 ls_cwd_content\n",
+    "julien@ubuntu:/tmp/h$ cat ls_cwd_content \n",
+    "total 20\n",
+    "drwxrwxr-x  2 julien julien 4096 Sep 20 18:18 .\n",
+    "drwxrwxrwt 13 root   root   4096 Sep 20 18:18 ..\n",
+    "-rwxrw-r--  1 julien julien   36 Sep 20 18:18 8-cwd_state\n",
+    "-rw-rw-r--  1 betty  julien   23 Sep 20 14:25 hello\n",
+    "-rw-rw-r--  1 julien julien  926 Sep 20 17:52 iacta\n",
+    "-rw-rw-r--  1 julien julien    0 Sep 20 18:18 ls_cwd_content\n",
     "julien@ubuntu:/tmp/h$ \n",
     "```\n",
     "\n",
     "#### Repo:\n",
     "\n",
     "* GitHub repository: `alx-system_engineering-devops`\n",
-    "* Directory: `0x00-shell_basics`\n",
-    "* File: ` 8-firstdelete`\n"
+    "* Directory: `0x02-shell_redirections`\n",
+    "* File: ` 8-cwd_state`\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing 0x01-shell_permissions/8-James_Bond\n"
+      "Writing 0x02-shell_redirections/8-cwd_state\n"
      ]
     }
    ],
    "source": [
-    "%%file 0x01-shell_permissions/8-James_Bond\n",
+    "%%file 0x02-shell_redirections/8-cwd_state\n",
     "#!/bin/bash\n",
-    "chmod 007 hello"
+    "ls -la > ls_cwd_content"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "bash: line 2: .0x01-shell_permissions/8-James_Bond: No such file or directory\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 164\n",
-      "drwxr-xr-x 2 elkomy elkomy  4096 Mar  2 14:09 0x00-shell_basics\n",
-      "-rw-r--r-- 1 elkomy elkomy 75098 Mar  2 15:54 0x00-shell_basics.ipynb\n",
-      "drwxr-xr-x 2 elkomy elkomy  4096 Mar  9 20:10 0x01-shell_permissions\n",
-      "-rw-r--r-- 1 elkomy elkomy 72813 Mar  9 20:10 0x01-shell_permissions.ipynb\n",
-      "-rw-r--r-- 1 elkomy elkomy   108 Mar  2 16:08 README.md\n",
-      "-rwxr-xr-x 1 elkomy elkomy     0 Mar  9 01:18 hello\n",
-      "-rw-r--r-- 1 elkomy elkomy   688 Mar  2 14:52 school.mgc\n",
-      "-rw-r--r-- 1 elkomy elkomy     0 Feb 28 01:08 test.HTML\n"
+      "0x00-shell_basics\n",
+      "0x00-shell_basics.ipynb\n",
+      "0x01-shell_permissions\n",
+      "0x01-shell_permissions.ipynb\n",
+      "0x02-shell_redirections\n",
+      "0x02. Shell, InputOutput Redirections and filters.ipynb\n",
+      "README.md\n",
+      "\\*\\\\'\"Best School\"\\'\\\\*$\\?\\*\\*\\*\\*\\*:)\n",
+      "hello\n",
+      "ls_cwd_content\n",
+      "school.mgc\n",
+      "test.HTML\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
-    "chmod u+x 0x01-shell_permissions/8-James_Bond\n",
-    ".0x01-shell_permissions/8-James_Bond\n",
-    "ls -l"
+    "chmod u+x 0x02-shell_redirections/8-cwd_state\n",
+    "./0x02-shell_redirections/8-cwd_state\n",
+    "ls\n"
    ]
   },
   {
