0x02-shell_redirections/9-duplicate_last_line

--- a/0x02. Shell, InputOutput Redirections and filters.ipynb
+++ b/0x02. Shell, InputOutput Redirections and filters.ipynb
@@ -1407,16 +1407,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 3f22ebb] 8. James Bond\n",
-      " 2 files changed, 44 insertions(+), 32 deletions(-)\n",
-      " create mode 100755 0x01-shell_permissions/8-James_Bond\n"
+      "[main cdfe762] 0x02-shell_redirections/8-cwd_state\n",
+      " 3 files changed, 73 insertions(+), 48 deletions(-)\n",
+      " create mode 100755 0x02-shell_redirections/8-cwd_state\n",
+      " create mode 100644 ls_cwd_content\n"
      ]
     },
     {
@@ -1424,14 +1425,14 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   33ba3fc..3f22ebb  main -> main\n"
+      "   987b10d..cdfe762  main -> main\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
     "git add .\n",
-    "git commit -m \"8. James Bond\"\n",
+    "git commit -m \"0x02-shell_redirections/8-cwd_state\"\n",
     "git push"
    ]
   },
@@ -1444,7 +1445,7 @@
     "\n",
     "---\n",
     "<center>\n",
-    "<h4> 9. John Doe</h4>\n",
+    "<h4> 9. Duplicate last line</h4>\n",
     "</center>\n",
     "\n",
     "---"
@@ -1454,67 +1455,82 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Write a script that sets the mode of the file `hello` to this:\n",
+    "##### Write a script that duplicates the last line of the file iacta\n",
+    "\n",
+    "* The file iacta will be in the working directory\n",
     "\n",
     "```bash\n",
-    "-rwxr-x-wx 1 julien julien 23 Sep 20 14:25 hello\n",
+    "julien@ubuntu:/tmp/h$ cat iacta \n",
+    "Alea iacta est\n",
+    "\n",
+    "Alea iacta est (\"The die is cast\") is a Latin phrase attributed by Suetonius\n",
+    "(as iacta alea est) to Julius Caesar on January 10, 49 BC\n",
+    "as he led his army across the Rubicon river in Northern Italy. With this step,\n",
+    "he entered Italy at the head of his army in defiance of the Senate and began\n",
+    "his long civil war against Pompey and the Optimates. The phrase has been\n",
+    "adopted in Italian (Il dado è tratto), Romanian (Zarurile au fost aruncate),\n",
+    "Spanish (La suerte está echada), French (Les dés sont jetés), Portuguese (A\n",
+    "sorte está lançada), Dutch (De teerling is geworpen),\n",
+    "German (Der Würfel ist gefallen), Hungarian (A kocka el van vetve) and many other languages to\n",
+    "indicate that events have passed a point of no return.\n",
+    "\n",
+    "Read more: https://en.wikipedia.org/wiki/Alea_iacta_est\n",
+    "julien@ubuntu:/tmp/h$ ./9-duplicate_last_line \n",
+    "julien@ubuntu:/tmp/h$ cat iacta \n",
+    "Alea iacta est\n",
+    "\n",
+    "Alea iacta est (\"The die is cast\") is a Latin phrase attributed by Suetonius\n",
+    "(as iacta alea est) to Julius Caesar on January 10, 49 BC\n",
+    "as he led his army across the Rubicon river in Northern Italy. With this step,\n",
+    "he entered Italy at the head of his army in defiance of the Senate and began\n",
+    "his long civil war against Pompey and the Optimates. The phrase has been\n",
+    "adopted in Italian (Il dado è tratto), Romanian (Zarurile au fost aruncate),\n",
+    "Spanish (La suerte está echada), French (Les dés sont jetés), Portuguese (A\n",
+    "sorte está lançada), Dutch (De teerling is geworpen),\n",
+    "German (Der Würfel ist gefallen), Hungarian (A kocka el van vetve) and many other languages to\n",
+    "indicate that events have passed a point of no return.\n",
+    "\n",
+    "Read more: https://en.wikipedia.org/wiki/Alea_iacta_est\n",
+    "Read more: https://en.wikipedia.org/wiki/Alea_iacta_est\n",
+    "julien@ubuntu:/tmp/h$ \n",
     "```\n",
     "\n",
-    "* The file `hello` will be in the working directory\n",
-    "* You are not allowed to use commas for this script\n",
     "\n",
     "#### Repo:\n",
     "\n",
     "* GitHub repository: `alx-system_engineering-devops`\n",
-    "* Directory: `0x01-shell_permissions`\n",
-    "* File: `9-John_Doe`"
+    "* Directory: `0x02-shell_redirections`\n",
+    "* File: `9-duplicate_last_line`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting 0x01-shell_permissions/9-John_Doe\n"
+      "Writing 0x02-shell_redirections/9-duplicate_last_line\n"
      ]
     }
    ],
    "source": [
-    "%%file 0x01-shell_permissions/9-John_Doe\n",
+    "%%file 0x02-shell_redirections/9-duplicate_last_line\n",
     "#!/bin/bash\n",
-    "chmod 753 hello"
+    "tail -n 1 iacta >> iacta"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "total 164\n",
-      "drwxr-xr-x 2 elkomy elkomy  4096 Mar  9 20:47 0x00-shell_basics\n",
-      "-rw-r--r-- 1 elkomy elkomy 75098 Mar  2 15:54 0x00-shell_basics.ipynb\n",
-      "drwxr-xr-x 2 elkomy elkomy  4096 Mar  9 20:46 0x01-shell_permissions\n",
-      "-rw-r--r-- 1 elkomy elkomy 72905 Mar  9 21:02 0x01-shell_permissions.ipynb\n",
-      "-rw-r--r-- 1 elkomy elkomy   108 Mar  2 16:08 README.md\n",
-      "-rwxr-x-wx 1 elkomy elkomy     0 Mar  9 01:18 hello\n",
-      "-rw-r--r-- 1 elkomy elkomy   688 Mar  2 14:52 school.mgc\n",
-      "-rw-r--r-- 1 elkomy elkomy     0 Feb 28 01:08 test.HTML\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%bash\n",
-    "chmod u+x 0x01-shell_permissions/9-John_Doe\n",
-    "./0x01-shell_permissions/9-John_Doe\n",
-    "ls -l\n"
+    "chmod u+x 0x02-shell_redirections/9-duplicate_last_line\n",
+    "./0x02-shell_redirections/9-duplicate_last_line\n"
    ]
   },
   {
